<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="footer">AMov 18/19</string>
    <string name="app_name">ReversISEC</string>
    <string name="game_rule">1.GAME OBJECTIVES\nThe goal is to have more pieces in the board than your opponent. The game ends when all positions are filled with pieces or when the players can’t make any valid move.\n2.HOW TO PLAY\nReversi is played with white and black pieces. In the player’s turn, he places one piece on the board with the player’s color facing up. The player needs to capture at least one piece from the opponent in each move. The captured pieces are flipped and now belong to the player who made the move.\n3.CAPTURE PIECES\nThe player must place a piece in such a position that there exists at least one straight (horizontal, vertical or diagonal) occupied line between the new piece and another same colored piece, with one or more contiguous opponent pieces between them.\n4. PLAY OR PASS\nIf the player can’t make a valid move, his turn passes automatically to the opponent. This rule is not applicable if the opponent also cannot make a valid move. In this case, the game ends.\n5. SPECIAL ACTIONS\nThere are two special actions in this game mode which become usable on the 5th round. Each special move can be used only once during the game. The "Pass Move" allows a player to pass it’s turn to the opponent without placing any piece. The "Play Twice" allows the player to make two consecutive moves in the same turn.</string>
    <string name="choose_token">Escolha Cor</string>
    <string name="play">Jogar</string>
    <string name="rookie">Rookie</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="title">title</string>
    <string name="rules">RULES</string>
    <string name="vs">VS</string>
    <string name="x">× ..</string>
    <string name="player_piece">playerPiece</string>
    <string name="opponent_piece">oponentPiece</string>
    <string name="player_1">Player 1</string>
    <string name="ok">OK</string>
    <string name="online">play online</string>
    <string name="play_ai">play</string>
    <string name="play_human">play vs player</string>
    <string name="pro">Pro</string>
    <string name="master">Master</string>
    <string name="new_game">New Game</string>
    <string name="pass">Pass Move</string>
    <string name="play_again">Play Twice</string>
    <string name="quit_game">Quit Game</string>
    <string name="camera_name">Camera</string>
    <string name="take_picture">Take picture</string>
    <string name="game_mode_2p">2 Players"</string>
    <string name="_1_jogador">1 Jogador</string>
    <string name="_2_jogadores">2 Jogadores</string>
    <string name="ai">AI</string>

</resources>