<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/titulo"
            android:src="@drawable/title"
            tools:src="@drawable/title"
            android:scaleY="0.8"
            android:scaleX="0.8"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center"
        >


    <Button
        android:id="@+id/playVsAiButton"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textColor="@color/WHITE"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/play_ai"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />

    <Button
        android:id="@+id/playVsHumanButton"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textColor="@color/WHITE"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/play_human"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

    <Button
        android:id="@+id/playOnline"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textColor="@color/WHITE"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/online"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        style="@style/Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/ruleButton"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="30dp"
            android:textColor="@color/WHITE"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/rules"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/footer"
            android:textColor="@color/WHITE" />

    </LinearLayout>

</LinearLayout>

