<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/back"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/choose_token"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="Choose Token" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@drawable/radio_button_black"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_button_white"
            android:button="@null"
            android:gravity="center" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_difficulty"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="Cooose Dificulty" />

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/level1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_ai"
                android:button="@null"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/rookie"
                android:textColor="@color/BLACK"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/level2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_ai"
                android:button="@null"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/pro"
                android:textColor="@color/BLACK"
                android:textSize="16sp"
                tools:text="Rookie"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/level3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_ai"
                android:button="@null"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/master"
                android:textStyle="bold"
                android:textColor="@color/BLACK"
                android:textSize="16sp" />
        </LinearLayout>
    </RadioGroup>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg_blue"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:text="@string/play"
        android:textColor="@color/WHITE"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>